--- a/.pylintrc
+++ b/.pylintrc
@@ -1,6 +1,9 @@
 [MASTER]
 extension-pkg-whitelist=lxml
 
+[TYPECHECK]
+ignored-modules = numpy
+
 [MESSAGES CONTROL]
 disable =
     missing-docstring,
