--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "cor-asv-ann-data-processing"]
 	path = data-processing
-	url = ssh://git@git.informatik.uni-leipzig.de/ocr-d/cor-asv-ann-data-processing
+	url = https://git.informatik.uni-leipzig.de/ocr-d/cor-asv-ann-data-processing
 [submodule "cor-asv-ann-models"]
 	path = models
-	url = ssh://git@git.informatik.uni-leipzig.de/ocr-d/cor-asv-ann-models
+	url = https://git.informatik.uni-leipzig.de/ocr-d/cor-asv-ann-models
