--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 ocrd >= 2.0
 click
-keras >= 2.3.1
+keras == 2.3.*
 numpy
-tensorflow == 1.15.2
+tensorflow-gpu == 1.15.*
 h5py
 editdistance
 matplotlib
