CI: use /tmp for aux clone of ocrd_all

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,8 @@ jobs:
       # workaround for tensorflow-gpu not being available on PyPI anymore:
       # get nvidia-tensorflow from nvidia-pyindex and repackage it as tensorflow-gpu
       - run: |
-          git clone https://github.com/OCR-D/ocrd_all && \
-          make -f <(echo new:; echo ' $(pip_install_tf1nvidia)') -f ocrd_all/Makefile new SEMPIP=
+          git clone https://github.com/OCR-D/ocrd_all /tmp/ocrd_all && \
+          make -f <(echo new:; echo ' $(pip_install_tf1nvidia)') -f /tmp/ocrd_all/Makefile new SEMPIP=
       - checkout
       - run: make deps
       - run: make install
