CI: clone first

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,8 @@ jobs:
       # workaround for tensorflow-gpu not being available on PyPI anymore:
       # get nvidia-tensorflow from nvidia-pyindex and repackage it as tensorflow-gpu
       - run: |
-          mkdir -p /tmp/ocrd_all
+          git clone https://github.com/OCR-D/ocrd_all /tmp/ocrd_all
           pushd /tmp/ocrd_all
-          git clone https://github.com/OCR-D/ocrd_all
           make -f <(echo new:; echo ' $(pip_install_tf1nvidia)') -f Makefile new SEMPIP=
       - checkout
       - run: make deps
