--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,18 +3,11 @@ jobs:
 
   build-python3:
     docker:
-      - image: ocrd/core-cuda
+      - image: ocrd/core-cuda-tf1
     environment:
       PIP: pip3
       PYTHON: python3
     steps:
-      - run: apt-get update && apt-get install -y --no-install-recommends make git
-      # workaround for tensorflow-gpu not being available on PyPI anymore:
-      # get nvidia-tensorflow from nvidia-pyindex and repackage it as tensorflow-gpu
-      - run: |
-          git clone https://github.com/OCR-D/ocrd_all /tmp/ocrd_all
-          pushd /tmp/ocrd_all
-          make -f <(echo preinstall:; echo '	$(pip_install_tf1nvidia)') -f Makefile preinstall SEMPIP= ACTIVATE_VENV=/dev/null
       - checkout
       - run: make deps
       - run: make install
