--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,8 +12,25 @@ jobs:
       - run: make deps
       - run: make install
 
+  deploy:
+    docker:
+      - image: circleci/buildpack-deps:stretch
+    steps:
+      - checkout
+      - setup_remote_docker: # https://circleci.com/docs/2.0/building-docker-images/
+          docker_layer_caching: true
+      - run: make docker
+      - run:
+          name: Login to Docker Hub
+          command: echo "$DOCKERHUB_PASS" | docker login --username "$DOCKERHUB_USER" --password-stdin
+      - run: docker push ocrd/cor-asv-ann
+      
 workflows:
   version: 2
   build-and-test:
     jobs:
       - build-python3
+      - deploy:
+          filters:
+            branches:
+              only: master
