CI: install hunspell for ocrd-cor-asv-ann-mark test

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
       PYTHON: python3
     steps:
       - checkout
+      - run: sudo apt-get install -y hunspell hunspell-de-de
       - run: make deps deps-test
       - run: make install
       # restore pretrained model from previous download
@@ -18,7 +19,7 @@ jobs:
       - run:
           name: Test with pytest and measure code coverage
           command: make coverage PYTEST_ARGS="-vv --junitxml=test-results/pytest.xml"
-          no_output_timeout: 30m
+          no_output_timeout: 59m
       - save_cache:
           key: v0.1-model-s2s.dta19.Fraktur4.d2.w0512
           paths:
