CD PyPI: use Pythonic base image

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,7 @@ jobs:
 
   deploy-pypi:
     docker:
-      - image: cimg/base:stable
+      - image: cimg/python:3.8
     steps:
       - checkout
       - run: pip install twine build
