--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = [
 ]
 description = "sequence-to-sequence translator for noisy channel error correction"
 readme = "README.md"
-license.text = "Apache License 2.0"
+license.text = "Apache-2.0"
 requires-python = ">=3.8"
 
 dynamic = ["version", "dependencies"]
